# CKKS-MNIST

./: .gitignore  GUIDE.md  README.md
FHE/GPU/ckks-demo/: CMakeLists.txt  README.md  ckks_demo.cu
FHE/GPU/ckks-mnist/: CMakeLists.txt  README.md  ckks_mnist.cu  export_model.py  verify_plain.py
FHE/GPU/ckks-mnist/data/: images.txt
FHE/GPU/phantom-fhe/: setup_env.bat
FHE/GPU/phantom-fhe-reading/: 00_目录.md  01_params_and_containers.md  02_rns_and_context.md  03_encode_decode.md  04_keys_and_encryption.md
FHE/GPU/phantom-fhe/src/: eval_key_switch.cu  rns_bconv.cu
FHE/backend/: README.md  app.py  requirements.txt
FHE/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
FHE/frontend/src/: App.vue
MNIST/normal/: model.py  requirements.txt  test.py  train.py
MNIST/normal/checkpoints/: mnist_mlp.pth
MNIST/normal/model/: fhe_friendly_cnn.pth
software/: get_sample.py  server.py
software/templates/: index.html
